--- a/Exp_2/app/src/main/res/layout/activity_add_customer.xml
+++ b/Exp_2/app/src/main/res/layout/activity_add_customer.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/button_Add_Customer"
+    android:id="@+id/lay_Add_Customer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -113,6 +113,29 @@
 
         <Spinner
             android:id="@+id/spinner_Gender"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="63dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#F85D5D"
+            android:text="Country"
+            android:textAlignment="center"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <Spinner
+            android:id="@+id/spinner_Country"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1" />
