--- a/Exp_7/Exp_7.2/app/src/main/res/layout/activity_main.xml
+++ b/Exp_7/Exp_7.2/app/src/main/res/layout/activity_main.xml
@@ -22,84 +22,83 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <!-- First Row of Buttons -->
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/add_first_fragment_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Button" />
+                android:text="ADD First Fargment" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/add_second_fragment_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Button" />
+                android:text="ADD Second Fargment" />
         </TableRow>
 
-        <!-- Second Row of Buttons -->
+
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/remove_first_fragment_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Button" />
+                android:text="Remove First Fragment" />
 
             <Button
-                android:id="@+id/button4"
+                android:id="@+id/remove_second_fragment_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Button" />
+                android:text="Remove Second Fragment" />
         </TableRow>
 
-        <!-- Third Row of Buttons -->
+
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <Button
-                android:id="@+id/button5"
+                android:id="@+id/attach_first_fragment_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Button" />
+                android:text="Attach First Fragment" />
 
             <Button
-                android:id="@+id/button6"
+                android:id="@+id/detach_first_fragment_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Button" />
+                android:text="Detach first Fragment" />
         </TableRow>
 
-        <!-- Fourth Row of Buttons -->
+
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <Button
-                android:id="@+id/button7"
+                android:id="@+id/replace_first_second_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Button" />
+                android:text="Replace First Fragment With Second Fragment" />
 
             <Button
-                android:id="@+id/button8"
+                android:id="@+id/replace_second_first_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Button" />
+                android:text="Replace Second Fragment With First Fragment" />
         </TableRow>
     </TableLayout>
 
